force-app/main/default/objects/PreSales__c/PreSales__c.object-meta.xml
<CustomObject>
    <label>사전영업</label>
    <nameField>
        <label>활동사항</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>