force-app/main/default/objects/PreSales__c/fields/FuelValidation__c.field-meta.xml
<CustomField>
    <fullName>FuelValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FuelValidation</label>
    <type>Checkbox</type>
</CustomField>