force-app/main/default/objects/PreSales__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>담당자 접촉 및 유대형성</fullName>
            </value>
            <value>
                <fullName>의사결정권자 파악 및 접촉</fullName>
            </value>
            <value>
                <fullName>경쟁사 정보파악</fullName>
            </value>
            <value>
                <fullName>고객 분석</fullName>
            </value>
            <value>
                <fullName>사전제안</fullName>
            </value>
            <value>
                <fullName>입찰유도 및 RFP 작성지원</fullName>
            </value>
            <value>
                <fullName>해당없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>