force-app/main/default/objects/PreSales__c/validationRules/FuelValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FuelValidation</fullName>
    <active>true</active>
    <errorConditionFormula>FuelValidation__c = True</errorConditionFormula>
    <errorMessage>주유비 승인 중인 활동은 변경 혹은 삭제 불가합니다.</errorMessage>
</ValidationRule>