force-app/main/default/objects/PreSales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>WorkType__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ActivityInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>